--- a/services.html
+++ b/services.html
@@ -473,11 +473,14 @@ img {
         .footer-logo {
             background-color: white;
             border: 3px solid teal;
-            border-radius: 50%;
-            padding: 15px 25px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-            width: 200px;
+            border-radius: 50%; /* Makes it a circle/oval */
+            padding: 15px 25px; /* Adjust padding for oval shape */
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Optional: Adds a slight shadow for depth */
+            transition: transform 0.3s ease; /* Smooth hover effect */
+            display: block;
+            width: 200px; /* Adjust the width as per your logo */
+            height: auto;
+            margin: 0 auto;
         }
         .footer-logo:hover {
             transform: scale(1.05);
