--- a/About us.html
+++ b/About us.html
@@ -1,7 +1,7 @@
 head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The InscribeCo - Home</title>
+    <title>The InscribeCo - About us</title>
     <style>
         /* General Styles */
         body {
