--- a/About us.html
+++ b/About us.html
@@ -358,27 +358,27 @@
         }
 
         /* Section Styles */
-       section {
-    display: flex;
-    padding: 50px;
-    align-items: center;
-    max-width: 1200px;
-    margin: auto;
-    transition: all 0.3s ease;
-    opacity: 0;
-    transform: translateX(100%);
-}
+        .section {
+            display: flex;
+            padding: 50px;
+            align-items: center;
+            max-width: 1200px;
+            margin: auto;
+            transition: all 0.3s ease;
+            opacity: 0;
+            transform: translateX(100%);
+        }
 
-.section:nth-child(even) {
-    flex-direction: row-reverse;
-    transform: translateX(-100%);
-}
+        .section:nth-child(even) {
+            flex-direction: row-reverse;
+            transform: translateX(-100%);
+        }
 
-.text,
-.image {
-    flex: 1;
-    padding: 40px;
-}
+        .text,
+        .image {
+            flex: 1;
+            padding: 40px;
+        }
 
         .text h2 {
             font-size: 2rem;
@@ -401,15 +401,14 @@
         }
 
         .image-left img,
-.image-right img {
-    width: 100%;
-    height: auto; /* Remove fixed height */
-    object-fit: cover;
-    border-radius: 12px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease;
-}
-
+        .image-right img {
+            max-width: 100%;
+            height: 300px;
+            object-fit: cover;
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+        }
 
         .image-right img:hover,
         .image-left img:hover {
@@ -461,7 +460,6 @@
 
     /* Responsive Styles for Sections */
 @media (max-width: 768px) {
-    /* Section Adjustments */
     .section {
         flex-direction: column;
         padding: 20px;
@@ -779,34 +777,32 @@
         });
     });
 
-  
-   // Section Animation for Transition Effect
-window.addEventListener('scroll', function () {
-    const sections = document.querySelectorAll('.section');
-    const triggerHeight = window.innerHeight * 0.75;
-    const isMobile = window.innerWidth <= 768;
+    // Section Animation for Transition Effect
+    window.addEventListener('scroll', function () {
+        const sections = document.querySelectorAll('.section');
+        const triggerHeight = window.innerHeight * 0.75;
+        const isMobile = window.innerWidth <= 768;
 
-    sections.forEach((section, index) => {
-        const sectionTop = section.getBoundingClientRect().top;
+        sections.forEach((section, index) => {
+            const sectionTop = section.getBoundingClientRect().top;
 
-        if (sectionTop < triggerHeight) {
-            section.style.opacity = '1';
-            section.style.transform = 'translateX(0)';
-        } else if (!isMobile) { // Apply transform only on non-mobile
-            if ((index + 1) % 2 === 0) {
-                section.style.transform = 'translateX(-100%)';
+            if (sectionTop < triggerHeight) {
+                section.style.opacity = '1';
+                section.style.transform = 'translateX(0)';
+            } else if (!isMobile) { // Apply transform only on non-mobile
+                if ((index + 1) % 2 === 0) {
+                    section.style.transform = 'translateX(-100%)';
+                } else {
+                    section.style.transform = 'translateX(100%)';
+                }
+                section.style.opacity = '0';
             } else {
-                section.style.transform = 'translateX(100%)';
+                // Reset transform on mobile
+                section.style.transform = 'translateX(0)';
+                section.style.opacity = '1';
             }
-            section.style.opacity = '0';
-        } else {
-            // Reset transform on mobile
-            section.style.transform = 'translateX(0)';
-            section.style.opacity = '1';
-        }
+        });
     });
-});
-        
 </script>
 
 
