--- a/contactus.html
+++ b/contactus.html
@@ -492,11 +492,22 @@
 </head>
 
 <body>
-    <!-- Top Bar Section -->
-    <div class="top-bar">
-        <img src="images/call.png" alt="Phone Icon" class="phone-icon">
-        <span>Call Us: <a href="tel:+442032893891">+44 203 289 3891</a></span>
+    <<!-- Top Bar Section -->
+<div class="top-bar" style="display: flex; justify-content: center; align-items: center; padding: 0 10px; height: 50px; background-color: lightgrey;">
+    <div style="display: flex; align-items: center;">
+        <!-- Phone Contact -->
+        <span style="display: flex; align-items: center; margin-right: 40px;">
+            <img src="images/call.png" alt="Phone Icon" class="phone-icon" style="width: 24px; height: 24px; margin-right: 8px;">
+            <a href="tel:+442032893891" style="text-decoration: none; color: #333; font-size: 13px;">+44 203 289 3891</a>
+        </span>
+        
+        <!-- Email Contact -->
+        <span style="display: flex; align-items: center;">
+            <img src="images/mail-removebg-preview.png" alt="Email Icon" class="email-icon" style="width: 24px; height: 24px; margin-right: 8px;">
+            <a href="mailto:theinscribeco@gmail.com" style="text-decoration: none; color: #333; font-size: 13px;">theinscribeco@gmail.com</a>
+        </span>
     </div>
+</div>
 
     <!-- Header Section -->
     <header>
