--- a/contactus.html
+++ b/contactus.html
@@ -593,7 +593,7 @@
   
           <!-- Footer Section -->
 
-<<!-- Footer Section -->
+<!-- Footer Section -->
 <footer class="footer">
     <div class="footer-content">
         <!-- Footer Logo and Description -->
