--- a/contactus.html
+++ b/contactus.html
@@ -442,6 +442,9 @@
         .order-button:hover {
             background-color: #555;
         }
+        *, *::before, *::after {
+    box-sizing: border-box;
+}
 
 
         @media (max-width: 768px) {
@@ -499,7 +502,7 @@
 </head>
 
 <body>
-    <<!-- Top Bar Section -->
+    <!-- Top Bar Section -->
 <div class="top-bar" style="display: flex; justify-content: center; align-items: center; padding: 0 10px; height: 50px; background-color: lightgrey;">
     <div style="display: flex; align-items: center;">
         <!-- Phone Contact -->
