--- a/contactus.html
+++ b/contactus.html
@@ -496,7 +496,11 @@
             .footer-contact {
                 text-align: center;
                 margin: 20px 0;
-            }}
+            }
+        .footer-logo {
+        display: block;
+        margin: 0 auto;
+    }}
 
         </style>
 </head>
