--- a/contactus.html
+++ b/contactus.html
@@ -320,7 +320,7 @@
         .about-hero {
             border-radius: 20px;
             height: 70vh;
-            background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('images/contactus.jpg') no-repeat center center/cover;
+            background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('images/contact.jpg') no-repeat center center/cover;
             color: white;
             display: flex;
             justify-content: center;
