--- a/pricing.html
+++ b/pricing.html
@@ -316,6 +316,11 @@
         font-size: 14px;
         color: #bbb;
     }
+
+           *, *::before, *::after {
+    box-sizing: border-box;
+}
+
   
         .about-hero {
             border-radius: 20px;
