--- a/pricing.html
+++ b/pricing.html
@@ -45,6 +45,7 @@
             justify-content: center;
             align-items: center;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+            height: 100px;
         }
 
         .phone-icon {
