--- a/order.html
+++ b/order.html
@@ -375,7 +375,7 @@
             text-align: center;
             font-size: 30px;
             box-shadow: 2px 2px 3px #999;
-            z-index: 100;
+            z-index: 150;
             transition: background-color 0.3s ease, transform 0.3s ease;
             display: flex;
             justify-content: center;
@@ -477,6 +477,10 @@
         @media (max-width: 768px) {
                .hamburger {
                 display: block;
+            }
+
+            .top-bar{
+             height: 70px;
             }
 
             
