--- a/services.html
+++ b/services.html
@@ -432,7 +432,7 @@
             text-align: center;
             font-size: 30px;
             box-shadow: 2px 2px 3px #999;
-            z-index: 100;
+            z-index: 150;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -822,67 +822,68 @@
 
     <!-- JavaScript for Smooth Scrolling and Mobile Menu -->
     <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            // Smooth scrolling for navigation links
-            document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-                anchor.addEventListener('click', function(e) {
-                    e.preventDefault();
-                    document.querySelector(this.getAttribute('href')).scrollIntoView({
+    document.addEventListener("DOMContentLoaded", function() {
+        // Smooth scrolling for navigation links
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function(e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute('href'));
+                if (target) {
+                    target.scrollIntoView({
                         behavior: 'smooth'
                     });
-                });
+                }
             });
+        });
 
-            // Scroll to section function
-            window.scrollToSection = function(sectionId) {
-                document.getElementById(sectionId).scrollIntoView({
+        // Scroll to section function
+        window.scrollToSection = function(sectionId) {
+            const target = document.getElementById(sectionId);
+            if (target) {
+                target.scrollIntoView({
                     behavior: 'smooth'
                 });
             }
+        };
 
- 
- // Hamburger Menu Functionality
         // Hamburger Menu Functionality
-document.addEventListener('DOMContentLoaded', function () {
-    const hamburger = document.getElementById('hamburger');
-    const closeMenuButton = document.getElementById('close-menu');
-    const navLinks = document.getElementById('nav-links');
-    function toggleMenu(event) {
-        event.preventDefault();
-        event.stopPropagation();
-        hamburger.classList.toggle('open');
-        navLinks.classList.toggle('show');
-        navLinks.style.position = 'fixed';
-        navLinks.style.top = '0';
-        navLinks.style.right = '0';
-        navLinks.style.bottom = '0';
-        navLinks.style.left = '0';
-        navLinks.style.zIndex = "3000";
-        hamburger.style.zIndex = "2999"; // Set to a lower value than nav-links-mobile
-    }
-    function closeMenu(event) {
-        event.preventDefault();
-        event.stopPropagation();
-        hamburger.classList.remove('open');
-        navLinks.classList.remove('show');
-        // Reset hamburger z-index if needed
-        hamburger.style.zIndex = "2001"; // Ensure it's below nav-links-mobile
-    }
-    hamburger.addEventListener('click', toggleMenu);
-    hamburger.addEventListener('touchstart', toggleMenu);
-    closeMenuButton.addEventListener('click', closeMenu);
-    closeMenuButton.addEventListener('touchstart', closeMenu);
-    document.addEventListener('click', function (event) {
-        if (!navLinks.contains(event.target) && !hamburger.contains(event.target)) {
-            if (navLinks.classList.contains('show')) {
-                closeMenu(event);
+        const hamburger = document.getElementById('hamburger');
+        const closeMenuButton = document.getElementById('close-menu');
+        const navLinks = document.getElementById('nav-links');
+
+        if (hamburger && closeMenuButton && navLinks) {
+            function toggleMenu(event) {
+                event.preventDefault();
+                event.stopPropagation();
+                hamburger.classList.toggle('open');
+                navLinks.classList.toggle('show');
             }
+
+            function closeMenu(event) {
+                event.preventDefault();
+                event.stopPropagation();
+                hamburger.classList.remove('open');
+                navLinks.classList.remove('show');
+            }
+
+            hamburger.addEventListener('click', toggleMenu);
+            hamburger.addEventListener('touchstart', toggleMenu);
+            closeMenuButton.addEventListener('click', closeMenu);
+            closeMenuButton.addEventListener('touchstart', closeMenu);
+
+            // Close menu when clicking outside
+            document.addEventListener('click', function (event) {
+                if (!navLinks.contains(event.target) && !hamburger.contains(event.target)) {
+                    if (navLinks.classList.contains('show')) {
+                        closeMenu(event);
+                    }
+                }
+            });
+        } else {
+            console.error("Hamburger menu elements not found. Please check the IDs.");
         }
     });
+</script>
 
-
-
-
-    </script>
 </body>
 </html>
