--- a/Sample.html
+++ b/Sample.html
@@ -615,7 +615,7 @@
                         <div class="card-back">
                             <div class="card-title">Medical</div>
                             <div class="card-text">Explore our sample medical paper that delves into the intricacies of healthcare advancements and medical research.</div>
-                            <a href="medical_sample.pdf" class="download-button" download>Download Sample</a>
+                            <a href="Sample/medical sample 2.docx" class="download-button" download>Download Sample</a>
                         </div>
                     </div>
                 </div>
@@ -628,7 +628,7 @@
                         <div class="card-back">
                             <div class="card-title">Business</div>
                             <div class="card-text">Take a look at our business paper sample, focusing on strategic management and market analysis.</div>
-                            <a href="business_sample.pdf" class="download-button" download>Download Sample</a>
+                            <a href="Sample/business" class="download-button" download>Download Sample</a>
                         </div>
                     </div>
                 </div>
@@ -641,7 +641,7 @@
                         <div class="card-back">
                             <div class="card-title">Computer Sciences</div>
                             <div class="card-text">Discover our sample paper on emerging trends in computer science and AI technologies.</div>
-                            <a href="computer_science_sample.pdf" class="download-button" download>Download Sample</a>
+                            <a href="Sample/computer" class="download-button" download>Download Sample</a>
                         </div>
                     </div>
                 </div>
