--- a/pricing.html
+++ b/pricing.html
@@ -611,7 +611,11 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="images/logo (2).png" alt="Company Logo">
+              <div class="logo">
+    <a href="index.html">
+        <img src="images/logo (2).png" alt="Company Logo">
+    </a>
+</div>
             </div>
             <div class="hamburger" id="hamburger">
                 &#9776;
