--- a/Sample.html
+++ b/Sample.html
@@ -565,9 +565,11 @@
     <!-- Header Section -->
     <header>
         <nav>
-            <div class="logo">
-                <img src="images/logo (2).png" alt="Company Logo">
-            </div>
+             <div class="logo">
+    <a href="index.html">
+        <img src="images/logo (2).png" alt="Company Logo">
+    </a>
+</div>
             <div class="hamburger" id="hamburger">
                 &#9776;
             </div>
