--- a/About us.html
+++ b/About us.html
@@ -514,7 +514,7 @@
             text-align: center;
             font-size: 30px;
             box-shadow: 2px 2px 3px #999;
-            z-index: 100;
+            z-index: 150;
             transition: background-color 0.3s ease, transform 0.3s ease;
             display: flex;
             justify-content: center;
@@ -527,7 +527,7 @@
         }
 
         .whatsapp-icon {
-            width: 100%;
+            width: 200%;
             height: auto;
         }
     </style>
@@ -535,22 +535,14 @@
 
 <body>
     <!-- Top Bar Section -->
-    <div class="top-bar">
-        <div>
-            <!-- Phone Contact -->
-            <span>
-                <img src="images/call.png" alt="Phone Icon" class="phone-icon">
-                <a href="tel:+442032893891">+44 203 289 3891</a>
-            </span>
-
-            <!-- Email Contact -->
-            <span>
-                <img src="images/mail-removebg-preview.png" alt="Email Icon" class="email-icon">
-                <a href="mailto:theinscribeco@gmail.com">theinscribeco@gmail.com</a>
-            </span>
-        </div>
-    </div>
-
+   <!-- Top Bar Section -->
+<div class="top-bar" style="display: flex; justify-content: center; align-items: center; padding: 0 10px; height: 60px; background-color: lightgrey;">
+    <div style="display: flex; align-items: center;">
+        <!-- Phone Contact -->
+        <span style="display: flex; align-items: center; margin-right: 40px;">
+            <img src="images/call.png" alt="Phone Icon" class="phone-icon" style="width: 24px; height: 24px; margin-right: 8px;">
+            <a href="tel:+442032893891" style="text-decoration: none; color: #333; font-size: 13px;">+44 203 289 3891</a>
+        </span>
     <!-- Header Section -->
     <header>
         <nav>
