--- a/services.html
+++ b/services.html
@@ -259,6 +259,7 @@
             background: rgba(0, 0, 0, 0.5);
             padding: 20px;
             border-radius: 10px;
+            margin-top: 10;
         }
 
         .services-hero h1 {
