--- a/services.html
+++ b/services.html
@@ -259,7 +259,7 @@
             background: rgba(0, 0, 0, 0.5);
             padding: 20px;
             border-radius: 10px;
-            margin-top: 10;
+              margin-top: 20px;
         }
 
         .services-hero h1 {
