--- a/order.html
+++ b/order.html
@@ -349,6 +349,7 @@
             background: rgba(0, 0, 0, 0.5);
             padding: 20px;
             border-radius: 10px;
+            margin-top: 0px;
         }
 
         .about-hero h1 {
