--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
+    <!-- Open Graph -->
+<meta property="og:image" content="/path/to/logo.png">
+<!-- Twitter Card -->
+<meta name="twitter:image" content="/path/to/logo.png">
     <title>The InscribeCo - home </title>
     <style>
         /* General Styles */
