--- a/pricing.html
+++ b/pricing.html
@@ -4,6 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
+    <!-- Open Graph -->
+<meta property="og:image" content="/path/to/logo.png">
+<!-- Twitter Card -->
+<meta name="twitter:image" content="/path/to/logo.png">
     <title>The InscribeCo - Home</title>
     <style>
         /* General Styles */
