--- a/services.html
+++ b/services.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services - The InscribeCo</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
+     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
+    <!-- Open Graph -->
+<meta property="og:image" content="/path/to/logo.png">
+<!-- Twitter Card -->
+<meta name="twitter:image" content="/path/to/logo.png">
     <style>
         /* General Styles */
         body {
