--- a/Sample.html
+++ b/Sample.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
+     <link rel="icon" type="image/png" sizes="100x100" href="images/favicon.png">
     <!-- Open Graph -->
-<meta property="og:image" content="/path/to/logo.png">
+<meta property="og:image" content="images/favicon.png">
 <!-- Twitter Card -->
-<meta name="twitter:image" content="/path/to/logo.png">
+<meta name="twitter:image" content="images/favicon.png">
     <title>The InscribeCo - Home</title>
     <style>
           /* General Styles */
