--- a/About us.html
+++ b/About us.html
@@ -6,10 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="icon" type="image/png" sizes="100x100" href="images/favicon.png">
-    <!-- Open Graph -->
-<meta property="og:image" content="/path/to/logo.png">
+      <!-- Open Graph -->
+<meta property="og:image" content="images/favicon.png">
 <!-- Twitter Card -->
-<meta name="twitter:image" content="/path/to/logo.png">
+<meta name="twitter:image" content="images/favicon.png">
     <title>The InscribeCo - Home</title>
     <style>
         /* General Styles */
