--- a/services.html
+++ b/services.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services - The InscribeCo</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
-     <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
-    <!-- Open Graph -->
-<meta property="og:image" content="/path/to/logo.png">
+      <link rel="icon" type="image/png" sizes="100x100" href="images/favicon.png">
+       <!-- Open Graph -->
+<meta property="og:image" content="images/favicon.png">
 <!-- Twitter Card -->
-<meta name="twitter:image" content="/path/to/logo.png">
+<meta name="twitter:image" content="images/favicon.png">
     <style>
         /* General Styles */
         body {
