--- a/order.html
+++ b/order.html
@@ -737,7 +737,7 @@
         <!-- Contact Information -->
         <div class="footer-contact">
             <h3>Quick Info</h3>
-            <p>Email: <a href="mailto:INCRIBE@gmail.com">INCRIBE@gmail.com</a></p>
+              <p>Email: <a href="mailto:theinscribeco@gmail.com">theinscribeco@gmail.com</a></p>
             <p>Phone: <a href="tel:+442032893891">+44 203 289 3891</a></p>
             <h3>Follow Us</h3>
             <div class="social-icons">
