--- a/order.html
+++ b/order.html
@@ -611,11 +611,14 @@
     <main>
         <br><br>
         <section class="about-hero">
-            <div class="about-hero-content">
-                <h1>Place an Order</h1>
-                <p>Complete your order details</p>
-            </div>
-        </section>
+    <div class="about-hero-content">
+        <h1>Place an Order</h1>
+        <p>
+            Please complete your order details below. Once you've submitted your information, our team will review your order and reach out to you as soon as possible to confirm and finalize the details. We are committed to providing prompt and personalized service to ensure your satisfaction.
+        </p>
+    </div>
+</section>
+
 
  <!-- Order Form Section -->
  <section class="form-section" id="order-form-section">
