--- a/index.html
+++ b/index.html
@@ -1321,8 +1321,7 @@
             </div>
             <div class="sample">
                 <h3>Marketing Strategies for Small Businesses</h3>
-                <p>This paper explores the key marketing strategies that small businesses can use to increase visibility and
-                    customer engagement, focusing on digital marketing tools and traditional methods for local outreach.</p>
+                <p>This paper discusses various marketing strategies relevant to small businesses in the 21st century, focusing on email marketing, influencer marketing, and webinars. These approaches offer cost-effective methods for increasing visibility and customer engagement, helping businesses achieve competitive success. The paper highlights both the benefits and drawbacks of each strategy, examining their roles in digital marketing and their impact on small business growth in the evolving online marketplace.</p>
                 <a href="#" class="download-link">Download Paper</a>
             </div>
         </div>
