--- a/index.html
+++ b/index.html
@@ -1322,7 +1322,7 @@
             <div class="sample">
                 <h3>Marketing Strategies for Small Businesses</h3>
                 <p>This paper discusses various marketing strategies relevant to small businesses in the 21st century, focusing on email marketing, influencer marketing, and webinars. These approaches offer cost-effective methods for increasing visibility and customer engagement, helping businesses achieve competitive success. The paper highlights both the benefits and drawbacks of each strategy, examining their roles in digital marketing and their impact on small business growth in the evolving online marketplace.</p>
-                <a href="#" class="download-link">Download Paper</a>
+                <a href="business (2).docx" class="download-link">Download Paper</a>
             </div>
         </div>
     </section>
