--- a/About us.html
+++ b/About us.html
@@ -553,7 +553,7 @@
 
             <!-- Email Contact -->
             <span style="display: flex; align-items: center;">
-                <img src="images/mail-removebg-preview.png" alt="Email Icon" class="email-icon" style="width: 24px; height: 24px; margin-right: 8px;">
+                <img src="images/mail-removebg-preview.png" alt="Email Icon" class="email-icon">
                 <a href="mailto:theinscribeco@gmail.com" style="text-decoration: none; color: #333; font-size: 13px;">theinscribeco@gmail.com</a>
             </span>
         </div>
@@ -643,6 +643,7 @@
         </section>
     </main>
 
+    <!-- WhatsApp Button -->
     <a href="https://api.whatsapp.com/send/?phone=442032893891&text&type=phone_number&app_absent=0" class="whatsapp-float">
         <img src="images/whatsapp-removebg-preview.png" class="whatsapp-icon" alt="WhatsApp">
     </a>
