--- a/About us.html
+++ b/About us.html
@@ -21,20 +21,6 @@
             overflow-x: hidden;
         }
 
-        /* Header Styles */
-        header {
-            background-color: rgba(255, 255, 255, 0.3);
-            color: black;
-            width: 100%;
-            position: fixed;
-            top: 50px; /* Adjusted to account for top-bar */
-            z-index: 1500;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            backdrop-filter: blur(50px);
-            transition: all 0.3s ease;
-            margin-top: 0;
-        }
-
         /* Top Bar Styles */
         .top-bar {
             background-color: lightgrey;
@@ -51,6 +37,20 @@
             align-items: center;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.9);
             height: 50px;
+        }
+
+        /* Header Styles */
+        header {
+            background-color: rgba(255, 255, 255, 0.3);
+            color: black;
+            width: 100%;
+            position: fixed;
+            top: 50px; /* Height of .top-bar */
+            z-index: 1500;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            backdrop-filter: blur(50px);
+            transition: all 0.3s ease;
+            margin-top: 0; /* Removed previous margin-top */
         }
 
         /* Adjust main padding to prevent overlapping */
@@ -178,6 +178,11 @@
             position: absolute;
             top: 20px;
             right: 20px;
+            background: none;
+            border: none;
+            color: white;
+            font-size: 1.5rem;
+            cursor: pointer;
         }
 
         /* Footer Styles */
@@ -547,13 +552,13 @@
         <div style="display: flex; align-items: center;">
             <!-- Phone Contact -->
             <span style="display: flex; align-items: center; margin-right: 40px;">
-                <img src="images/call.png" alt="Phone Icon" class="phone-icon">
+                <img src="images/call.png" alt="Phone Icon" class="phone-icon" style="width: 24px; height: 24px; margin-right: 8px;">
                 <a href="tel:+442032893891" style="text-decoration: none; color: #333; font-size: 13px;">+44 203 289 3891</a>
             </span>
 
             <!-- Email Contact -->
             <span style="display: flex; align-items: center;">
-                <img src="images/mail-removebg-preview.png" alt="Email Icon" class="email-icon">
+                <img src="images/mail-removebg-preview.png" alt="Email Icon" class="email-icon" style="width: 24px; height: 24px; margin-right: 8px;">
                 <a href="mailto:theinscribeco@gmail.com" style="text-decoration: none; color: #333; font-size: 13px;">theinscribeco@gmail.com</a>
             </span>
         </div>
