--- a/About us.html
+++ b/About us.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="100x100" href="images/favicon.png">
+    <!-- Open Graph -->
+    <meta property="og:image" content="images/favicon.png">
+    <!-- Twitter Card -->
+    <meta name="twitter:image" content="images/favicon.png">
+    <title>The InscribeCo - Home</title>
+    <style>
 /* General Styles */
 body {
     font-family: 'Arial', sans-serif;
@@ -536,3 +549,257 @@ nav {
         margin: 15px auto;
     }
 }
+
+    </style>
+</head>
+
+<body>
+    <!-- Top Bar Section -->
+    <div class="top-bar">
+        <div style="display: flex; align-items: center;">
+            <!-- Phone Contact -->
+            <span style="display: flex; align-items: center; margin-right: 40px;">
+                <img src="images/call.png" alt="Phone Icon" class="phone-icon" style="width: 24px; height: 24px; margin-right: 8px;">
+                <a href="tel:+442032893891" style="text-decoration: none; color: #333; font-size: 13px;">+44 203 289 3891</a>
+            </span>
+
+            <!-- Email Contact -->
+            <span style="display: flex; align-items: center;">
+                <img src="images/mail-removebg-preview.png" alt="Email Icon" class="email-icon" style="width: 24px; height: 24px; margin-right: 8px;">
+                <a href="mailto:theinscribeco@gmail.com" style="text-decoration: none; color: #333; font-size: 13px;">theinscribeco@gmail.com</a>
+            </span>
+        </div>
+    </div>
+
+    <!-- Header Section -->
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="images/logo (2).png" alt="Company Logo">
+            </div>
+            <div class="hamburger" id="hamburger">
+                &#9776;
+            </div>
+            <ul class="nav-links" id="nav-links-desktop">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="About us.html">About Us</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="Sample.html">Samples</a></li>
+                <li><a href="pricing.html">Pricing</a></li>
+                <li><a href="order.html">Order</a></li>
+                <li><a href="contactus.html">Contact us</a></li>
+            </ul>
+            <ul class="nav-links-mobile" id="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="About us.html">About Us</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="Sample.html">Samples</a></li>
+                <li><a href="pricing.html">Pricing</a></li>
+                <li><a href="order.html">Order</a></li>
+                <li><a href="contactus.html">Contact us</a></li>
+                <button class="close-menu" id="close-menu">X</button>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="about-hero">
+            <div class="about-hero-content">
+                <h1>About Us</h1>
+                <p>We are dedicated to providing top-notch <br> academic writing services to help you succeed.</p>
+            </div>
+        </section>
+
+        <!-- First Section -->
+        <section class="section" id="section1">
+            <div class="text">
+                <h2>Our Mission</h2>
+                <p>We strive to provide outstanding academic and professional writing services to assist our clients in achieving their educational and career goals. Our mission is rooted in a commitment to excellence, ensuring that every piece of work we produce is of the highest quality. We believe in fostering a strong partnership with our clients, working closely with them to understand their unique needs and requirements. By leveraging our expertise, we aim to provide personalized and impactful solutions that drive success, growth, and fulfillment in both academic and professional settings.</p>
+            </div>
+            <div class="image-right">
+                <img src="images/about1.jpg" alt="Our Mission" loading="lazy">
+            </div>
+        </section>
+
+        <!-- Second Section -->
+        <section class="section" id="section2">
+            <div class="text">
+                <h2>Our Vision</h2>
+                <p>We aim to be the leading provider of high-quality writing services, helping individuals and organizations excel in their respective fields. Our vision is to empower clients with the tools and resources they need to succeed, regardless of the challenges they face. By staying ahead of industry trends and continuously improving our services, we aspire to set new standards for excellence in the writing and content development industry. We envision a future where every student, professional, and business can access the support they need to realize their full potential.</p>
+            </div>
+            <div class="image-left">
+                <img src="images/about2.jpeg" alt="Our Vision" loading="lazy">
+            </div>
+        </section>
+
+        <!-- Third Section -->
+        <section class="section" id="section3">
+            <div class="text">
+                <h2>Our Values</h2>
+                <p>Integrity, excellence, and dedication are the core values that guide our operations and service delivery. We are committed to maintaining the highest standards of honesty and professionalism in every interaction. Our team believes in the importance of delivering value through our work, ensuring that our clients receive the best possible service at every step. We are dedicated to continuous learning, growth, and development, both individually and collectively, to better serve our clients and make a meaningful difference in their academic and professional journeys.</p>
+            </div>
+            <div class="image-right">
+                <img src="images/typ.jpeg" alt="Our Values" loading="lazy">
+            </div>
+        </section>
+
+        <!-- Fourth Section -->
+        <section class="section" id="section4">
+            <div class="text">
+                <h2>Our Team</h2>
+                <p>Our team consists of experienced writers, editors, and support staff who are committed to delivering the best possible results. Each member of our team brings a unique set of skills and expertise to the table, allowing us to provide comprehensive and specialized support to our clients. We value collaboration, innovation, and a shared commitment to excellence, which drives us to continually enhance the quality of our services. Our team members are not just professionals; they are passionate individuals who genuinely care about the success and satisfaction of our clients.</p>
+            </div>
+            <div class="image-left">
+                <img src="images/s.jpeg" alt="Our Team" loading="lazy">
+            </div>
+        </section>
+    </main>
+
+    <!-- WhatsApp Button -->
+    <a href="https://api.whatsapp.com/send/?phone=442032893891&text&type=phone_number&app_absent=0" class="whatsapp-float">
+        <img src="images/whatsapp-removebg-preview.png" class="whatsapp-icon" alt="WhatsApp">
+    </a>
+
+    <!-- Footer Section -->
+    <footer class="footer">
+        <div class="footer-content">
+            <!-- Footer Logo and Description -->
+            <div class="footer-info">
+                <a href="index.html">
+                    <img src="images/logo (2).png" alt="Company Logo" class="footer-logo">
+                </a>
+                <p class="footer-paragraph">
+                    Inscribe.co offers a range of professional writing services designed to help you excel in your academic and professional endeavors. Whether you need assistance with essays, dissertations, or business writing, our expert team is here to support you.
+                </p>
+                <p class="footer-paragraph">
+                    Contact us today for a free consultation and discover how we can help you achieve your writing goals.
+                </p>
+            </div>
+
+            <!-- Quick Links -->
+            <div class="footer-links">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about-us.html">About Us</a></li>
+                    <li><a href="order.html">Order</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
+                    <li><a href="sample.html">Sample</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="contactus.html">Contact us</a></li>
+                </ul>
+            </div>
+
+            <!-- Contact Information -->
+            <div class="footer-contact">
+                <h3>Quick Info</h3>
+                <p>Email: <a href="mailto:theinscribeco@gmail.com">theinscribeco@gmail.com</a></p>
+                <p>Phone: <a href="tel:+442032893891">+44 203 289 3891</a></p>
+                <h3>Follow Us</h3>
+                <div class="social-icons">
+                    <a href="https://www.facebook.com/profile.php?id=61561225727357"><img src="images/fb-removebg-preview.png" alt="Facebook"></a>
+                    <!-- Add more social icons as needed -->
+                </div>
+            </div>
+        </div>
+
+        <!-- Footer Bottom Section -->
+        <div class="footer-bottom">
+            <p>&copy; 2013 Inscribe.co | All Rights Reserved</p>
+        </div>
+    </footer>
+
+    <script>
+        // Hamburger Menu Functionality
+        document.addEventListener('DOMContentLoaded', function () {
+            const hamburger = document.getElementById('hamburger');
+            const closeMenuButton = document.getElementById('close-menu');
+            const navLinks = document.getElementById('nav-links');
+
+            function toggleMenu(event) {
+                event.preventDefault();
+                event.stopPropagation();
+                hamburger.classList.toggle('open');
+                navLinks.classList.toggle('show');
+
+                if (navLinks.classList.contains('show')) {
+                    hamburger.classList.add('hide-hamburger');
+                } else {
+                    hamburger.classList.remove('hide-hamburger');
+                }
+
+                // Ensure the nav menu covers the entire viewport
+                navLinks.style.position = 'fixed';
+                navLinks.style.top = '0';
+                navLinks.style.right = '0';
+                navLinks.style.bottom = '0';
+                navLinks.style.left = '0';
+                navLinks.style.zIndex = "3000";
+                hamburger.style.zIndex = "3001";
+            }
+
+            function closeMenu(event) {
+                event.preventDefault();
+                event.stopPropagation();
+                hamburger.classList.remove('open');
+                navLinks.classList.remove('show');
+                hamburger.classList.remove('hide-hamburger');
+            }
+
+            hamburger.addEventListener('click', toggleMenu);
+            hamburger.addEventListener('touchstart', toggleMenu);
+            closeMenuButton.addEventListener('click', closeMenu);
+            closeMenuButton.addEventListener('touchstart', closeMenu);
+
+            // Close the menu when clicking outside of it
+            document.addEventListener('click', function (event) {
+                if (!navLinks.contains(event.target) && !hamburger.contains(event.target)) {
+                    if (navLinks.classList.contains('show')) {
+                        closeMenu(event);
+                    }
+                }
+            });
+        });
+
+        // Section Animation for Transition Effect
+        window.addEventListener('scroll', function () {
+            const sections = document.querySelectorAll('.section');
+            const triggerHeight = window.innerHeight * 0.75;
+            const isMobile = window.innerWidth <= 768;
+
+            sections.forEach((section, index) => {
+                const sectionTop = section.getBoundingClientRect().top;
+
+                if (sectionTop < triggerHeight) {
+                    section.style.opacity = '1';
+                    section.style.transform = 'translateX(0)';
+                } else if (!isMobile) { // Apply transform only on non-mobile
+                    if ((index + 1) % 2 === 0) {
+                        section.style.transform = 'translateX(-100%)';
+                    } else {
+                        section.style.transform = 'translateX(100%)';
+                    }
+                    section.style.opacity = '0';
+                } else {
+                    // Reset transform on mobile
+                    section.style.transform = 'translateX(0)';
+                    section.style.opacity = '1';
+                }
+            });
+        });
+
+        // Disable initial opacity and transform on mobile devices
+        document.addEventListener('DOMContentLoaded', function () {
+            const isMobile = window.innerWidth <= 768;
+            if (isMobile) {
+                const sections = document.querySelectorAll('.section');
+                sections.forEach(section => {
+                    section.style.opacity = '1';
+                    section.style.transform = 'translateX(0)';
+                });
+            }
+        });
+    </script>
+</body>
+
+</html>
