--- a/About us.html
+++ b/About us.html
@@ -297,40 +297,38 @@ nav {
     color: #bbb;
 }
 
-/* About Hero Section */
-.about-hero {
-    border-radius: 5px;
-    height: 70vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-        url('images/bg-DESKTOP-RI8354E.jpg') no-repeat center center/cover;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 0 2rem;
-    margin-top: 105px; /* Added margin to account for fixed headers */
-    transition: all 0.3s ease;
-}
+    
+        .about-hero {
+            border-radius: 5px;
+            height: 70vh;
+            background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('images/bg-DESKTOP-RI8354E.jpg') no-repeat center center/cover;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 0 2rem;
+            margin-top: 0;
+            transition: all 0.3s ease;
+        }
 
-.about-hero-content {
-    animation: fadeIn 2s ease-out;
-    background: rgba(0, 0, 0, 0.5);
-    padding: 20px;
-    border-radius: 10px;
-}
+        .about-hero-content {
+            animation: fadeIn 2s ease-out;
+            background: rgba(0, 0, 0, 0.5);
+            padding: 20px;
+            border-radius: 10px;
+        }
 
-.about-hero h1 {
-    font-size: 3rem;
-    color: #00bfff;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
-}
+        .about-hero h1 {
+            font-size: 3rem;
+            color: #00bfff;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+        }
 
-.about-hero p {
-    font-size: 1.5rem;
-    color: #e0e0e0;
-}
-
+        .about-hero p {
+            font-size: 1.5rem;
+            color: #e0e0e0;
+        }
 /* Section Styles */
 .section {
     display: flex;
