--- a/index.html
+++ b/index.html
@@ -746,8 +746,7 @@
     transform: scale(1.1);
 }
 .whatsapp-icon {
-    width: 250%; /* Adjusted to fit within the container */
-    height: 250%; /* Maintains aspect ratio */
+    width: 100%;
     object-fit: contain; /* Ensures the icon scales properly */
     justify-content: center;
 }
