--- a/About us.html
+++ b/About us.html
@@ -221,7 +221,7 @@ nav {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Optional: Adds a slight shadow for depth */
     transition: transform 0.3s ease; /* Smooth hover effect */
     display: block;
-    width: 200px; /* Adjust the width as per your logo */
+    width: 180px; /* Adjust the width as per your logo */
     height: auto;
     margin: 0 auto; /* Center the logo */
 }
@@ -572,9 +572,12 @@ nav {
     <!-- Header Section -->
     <header>
         <nav>
+            v>
             <div class="logo">
-                <img src="images/logo (2).png" alt="Company Logo">
-            </div>
+    <a href="index.html">
+        <img src="images/logo (2).png" alt="Company Logo">
+    </a>
+</div>
             <div class="hamburger" id="hamburger">
                 &#9776;
             </div>
