--- a/About us.html
+++ b/About us.html
@@ -486,7 +486,7 @@ nav {
 
          
     .about-hero {
-                   margin-top: 0;
+             margin-top: 0px;
             }
 
             .about-hero h1 {
